Adding content updates

--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -17,13 +17,14 @@
             <!-- Default panel contents -->
             <div class="panel-heading" style="font-variant:small-caps;font-size: 18px;">Lessons</div>
             <ol class="list-group">
-                <li><a href="lesson1.html">Overview & Demo</a></li>
+                <li><a href="lesson1.html">Overview / Demo</a></li>
                 <li><a href="lesson2.html">Project Setup</a></li>                
                 <li><a href="lesson3.html">Webhook Creation</a></li>                                
                 <li><a href="lesson4.html">I/O Integration Settings</a></li>                                            
                 <li><a href="lesson5.html">Define Actions</a></li>
-                <li><a href="lesson6.html">Composition Creation</a></li>
-                <li><a href="lesson7.html">Invoke Composition</a></li>
+                <li><a href="lesson6.html">Code the Composition</a></li>
+                <li><a href="lesson7.html">Deploy Composition</a></li>
+                <li><a href="lesson8.html">Invoke Composition</a></li>
                 <li><a href="lesson8.html">Adobe I/O Cloud Shell</a></li>
             </ol>
             <p></p>
