Content updates for new plans.

--- a/_includes/bootstrap-footer.html
+++ b/_includes/bootstrap-footer.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div id="footer">
-        <a href="https://twitter.com/dragosche"><p class="text-muted">Dragos DascalitaHaut</p></a>
+        <a href="https://twitter.com/adobeio"><p class="text-muted">Adobe I/O</p></a>
     </div>
 </div>
 
