--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -17,15 +17,15 @@
             <!-- Default panel contents -->
             <div class="panel-heading" style="font-variant:small-caps;font-size: 18px;">Lessons</div>
             <ol class="list-group">
-                <li><a href="lesson1.html">Overview / Demo</a></li>
-                <li><a href="lesson2.html">Project Setup</a></li>                
-                <li><a href="lesson3.html">Webhook Creation</a></li>                                
-                <li><a href="lesson4.html">I/O Integration Settings</a></li>                                            
-                <li><a href="lesson5.html">Define Actions</a></li>
-                <li><a href="lesson6.html">Code the Composition</a></li>
-                <li><a href="lesson7.html">Deploy Composition</a></li>
-                <li><a href="lesson8.html">Invoke Composition</a></li>
-                <li><a href="lesson8.html">Adobe I/O Cloud Shell</a></li>
+                <li><a href="lesson1.html">Demo / Overview</a></li>
+                <li><a href="lesson2.html">Adobe I/O Runtime Shell</a></li>                
+                <li><a href="lesson3.html">Adobe Console Integration</a></li>                                
+                <li><a href="lesson4.html">Event Handler Webhook</a></li>                                            
+                <li><a href="lesson5.html">Sensei Image Quality</a></li>
+                <li><a href="lesson6.html">CC Manual Upload</a></li>
+                <li><a href="lesson7.html">Sensei Body Crop</a></li>
+                <li><a href="lesson8.html">Sensei Auto Swatch & AEM Copy/Crop </a></li>
+                <li><a href="lesson9.html">Sensei Auto Tag & AEM Update Tags</a></li>
             </ol>
             <p></p>
         </div>
@@ -35,9 +35,9 @@
    data-text="Cross Platform Progressive Web Apps #PhoneGap #Cordova">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-<a href="https://twitter.com/dragosche" class="twitter-follow-button" data-show-count="true"
+<a href="https://twitter.com/adobeio" class="twitter-follow-button" data-show-count="true"
    data-size="large" data-lang="en">Follow
-    @dragosche</a>
+    @adobeio</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
     </div>
