--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,8 @@ blockquote {
     border: 1px solid transparent;
     border-radius: 4px;
     /*color: #31708f;*/
-    color: #FFF;
-    background-color: #1884ec;
+    color: #CCC;
+    background-color: #29558f;
      /*#29558f;*/
     
     /*background-color: #3550D9;*/
