--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -15,17 +15,17 @@
 
         <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading" style="font-variant:small-caps;font-size: 18px;">Lessons</div>
+            <div class="panel-heading" style="font-variant:small-caps;font-size: 18px;">Modules</div>
             <ol class="list-group">
                 <li><a href="lesson1.html">Demo / Overview</a></li>
                 <li><a href="lesson2.html">Adobe I/O Runtime Shell</a></li>                
                 <li><a href="lesson3.html">Adobe Console Integration</a></li>                                
                 <li><a href="lesson4.html">Event Handler Webhook</a></li>                                            
-                <li><a href="lesson5.html">Sensei Image Quality</a></li>
-                <li><a href="lesson6.html">CC Manual Upload</a></li>
-                <li><a href="lesson7.html">Sensei Body Crop</a></li>
-                <li><a href="lesson8.html">Sensei Auto Swatch & AEM Copy/Crop </a></li>
-                <li><a href="lesson9.html">Sensei Auto Tag & AEM Update Tags</a></li>
+                <li><a href="lesson5.html">Exercise 1: Sensei Image Quality</a></li>
+                <li><a href="lesson6.html">Exercise 2: CC Manual Upload</a></li>
+                <li><a href="lesson7.html">Exercise 3: Sensei Body Crop</a></li>
+                <li><a href="lesson8.html">Exercise 4: Sensei Auto Swatch </a></li>
+                <li><a href="lesson9.html">Exercise 5: Sensei Auto Tag</a></li>
             </ol>
             <p></p>
         </div>
