--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
                     <p>Adobe Summit 2018</p>
                     <p><a class="btn btn-primary btn-lg"
                           style="background-color: transparent;color: #00A1E1;margin-top: 8px;"
-                          href="lesson1.html" role="button">Start</a>
+                          href="module1.html" role="button">Start</a>
                 </div>
 
             </div>
