Updates based on feedback from Dawn/Dragos

--- a/_includes/bootstrap-header.html
+++ b/_includes/bootstrap-header.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="images/favicon.ico">
 
-    <title> Adobe Sensei AI Functions</title>
+    <title>Building Composable AI with Adobe Sensei Functions and Adobe I/O Runtime functions</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -50,7 +50,8 @@
             </button>
             <img src="images/adobelogo_redtag.svg" width="50" height="50">
             <a class="navbar-brand" href="index.html">
-                    Adobe Summit 2018: Sensei AI Functions</a>
+                    Building Composable AI with Adobe Sensei functions and Adobe I/O Runtime 
+                </a>
                 </div>
             <div>
         </div>
