--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../../index.html"> Adobe Sensei AI Functions Workshop</a>
+            <a class="navbar-brand" href="../../index.html"> Building Composable AI with Adobe Sensei functions and Adobe I/O Runtime 
+            </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
