--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -21,11 +21,11 @@
                 <li><a href="module2.html">Adobe I/O Runtime Shell</a></li>                
                 <li><a href="module3.html">Adobe Console Integration</a></li>                                
                 <li><a href="module4.html">Event Handler Webhook</a></li>                                            
-                <li><a href="module5.html">Exercise 1: Sensei Image Quality</a></li>
+                <li><a href="module5.html">Exercise 1: Adobe Sensei Image Quality</a></li>
                 <li><a href="module6.html">Exercise 2: Manual Image Processing</a></li>
-                <li><a href="module7.html">Exercise 3: Sensei Body Crop</a></li>
-                <li><a href="module8.html">Exercise 4: Sensei Auto Swatch </a></li>
-                <li><a href="module9.html">Exercise 5: Sensei Auto Tag</a></li>
+                <li><a href="module7.html">Exercise 3: Adobe Sensei Body Crop</a></li>
+                <li><a href="module8.html">Exercise 4: Adobe Sensei Auto Swatch </a></li>
+                <li><a href="module9.html">Exercise 5: Adobe Sensei Auto Tag</a></li>
             </ol>
             <p></p>
         </div>
