--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,8 @@
                 <!--<img src="images/pwa-logo.png" style="max-height: 300px;border: none;float: left;margin-right: 30px;"/>-->
                 <img src="images/adobe-io.jpg" style="max-height: 300px;border: none;float: left;margin-right: 30px;"/>
                 <div style="display: table-cell;vertical-align: middle;">
-                    <h1>Sensei AI Functions</h1>
+                    <h1>Building Composable AI with Adobe Sensei functions and Adobe I/O Runtime 
+                    </h1>
                     <p>Adobe Summit 2018</p>
                     <p><a class="btn btn-primary btn-lg"
                           style="background-color: transparent;color: #00A1E1;margin-top: 8px;"
