Moved logo to left of title.

--- a/_includes/bootstrap-header.html
+++ b/_includes/bootstrap-header.html
@@ -39,21 +39,26 @@
 </head>
 
 <body>
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default navbar-static-top" role="navigation">       
     <div class="container">
-        <div class="navbar-header">
+            
+            
+        <div class="navbar-header">            
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="images/adobelogo_redtag.svg" width="50" height="50">
+            <img src="images/adobelogo_redtag.svg" width="50" height="50" style="float:left">
             <a class="navbar-brand" href="index.html">
-                    Building Composable AI with Adobe Sensei functions and Adobe I/O Runtime 
+                        Building Composable AI with Adobe Sensei functions and Adobe I/O Runtime 
                 </a>
                 </div>
+                
             <div>
+                    
+            
         </div>
         
         <div class="navbar-collapse collapse">
